fix bug phần  hero-wrap , heading ra giữa

--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -5,6 +5,9 @@
 html {
     font-size: 62.5%;
 }
+html,body{
+    scroll-behavior: smooth;
+}
 
 body {
     font-family: 'Poppins', sans-serif;
@@ -80,11 +83,12 @@ a {
     height: calc(100vh - 90px);
     padding: 46px 0px;
     position: relative;
+    display: flex;
+   align-items: center;
 }
 
 .hero-wrap .heading {
     width: 51%;
-    margin-top: 130px;
 }
 
 .hero-wrap .heading .desc {
